examples/test/testpolicy438.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy438
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key15: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value41
          key49: value2
          key5: value43
      podSelector:
        matchLabels:
          key1: value26
          key26: value6
          key4: value37
